Fix mobile safari layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,11 @@ main {
 footer {
     width: 100vw;
     position: fixed;
-    bottom: 10px;
-    left: 0px;
-    text-align: center;
 }
 
 #reset {
     font-size: .8em;
+    padding: 0px;
     cursor: pointer;
     text-align: center;
     background-color: transparent;
@@ -31,9 +29,23 @@ footer {
     -webkit-tap-highlight-color: transparent;
 }
 
+@media screen and (min-width: 700px) {
+    footer {
+        bottom: 10px;
+        left: 0px;
+        text-align: center;
+    }
+}
+
 @media screen and (max-width: 700px) {
     .App {
         display: flex;
         flex-direction: row;
+    }
+
+    footer {
+        top: 5px;
+        right: 10px;
+        text-align: right;
     }
 }
